# home-assignment

./: docker-compose-higher.yml  docker-compose-lower.yml
be-high-level/: Dockerfile  go.mod  main.go
be-low-level/: Cargo.toml  Dockerfile
be-low-level/src/: main.rs
