[package]
name = "r2_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.35"
uuid = { version = "1.6", features = ["v4", "serde"] }
email_address = "0.2"
rand = "0.8"
env_logger = "0.11"
log = "0.4"